compiler/lume_hir/src/snapshots/lume_hir__lower__tests__new_snapshots@param_2.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"let _ = new A(0, 1);\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "_",
                                        location: <internal>:23:24,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:27:37,
                                        kind: New(
                                            New {
                                                id: 5871781006564002453,
                                                name: Type {
                                                    name: 'A',
                                                    type_params: [],
                                                    location: <internal>:31:32,
                                                },
                                                arguments: [
                                                    Expression {
                                                        id: 11743562013128004906,
                                                        location: <internal>:33:34,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 11743562013128004906,
                                                                location: <internal>:33:34,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 11743562013128004906,
                                                                        value: 0,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                    Expression {
                                                        id: 17615343019692007359,
                                                        location: <internal>:36:37,
                                                        kind: Literal(
                                                            Literal {
                                                                id: 17615343019692007359,
                                                                location: <internal>:36:37,
                                                                kind: Int(
                                                                    IntLiteral {
                                                                        id: 17615343019692007359,
                                                                        value: 1,
                                                                        kind: I32,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:19:39,
                        },
                    ],
                    location: <internal>:17:41,
                },
                location: <internal>:0:41,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "_",
                        location: <internal>:23:24,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:27:37,
                        kind: New(
                            New {
                                id: 5871781006564002453,
                                name: Type {
                                    name: 'A',
                                    type_params: [],
                                    location: <internal>:31:32,
                                },
                                arguments: [
                                    Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:33:34,
                                        kind: Literal(
                                            Literal {
                                                id: 11743562013128004906,
                                                location: <internal>:33:34,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 11743562013128004906,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    Expression {
                                        id: 17615343019692007359,
                                        location: <internal>:36:37,
                                        kind: Literal(
                                            Literal {
                                                id: 17615343019692007359,
                                                location: <internal>:36:37,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 17615343019692007359,
                                                        value: 1,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                },
            ),
            location: <internal>:19:39,
        },
    },
    expressions: {
        11743562013128004906: Expression {
            id: 11743562013128004906,
            location: <internal>:33:34,
            kind: Literal(
                Literal {
                    id: 11743562013128004906,
                    location: <internal>:33:34,
                    kind: Int(
                        IntLiteral {
                            id: 11743562013128004906,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        17615343019692007359: Expression {
            id: 17615343019692007359,
            location: <internal>:36:37,
            kind: Literal(
                Literal {
                    id: 17615343019692007359,
                    location: <internal>:36:37,
                    kind: Int(
                        IntLiteral {
                            id: 17615343019692007359,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:27:37,
            kind: New(
                New {
                    id: 5871781006564002453,
                    name: Type {
                        name: 'A',
                        type_params: [],
                        location: <internal>:31:32,
                    },
                    arguments: [
                        Expression {
                            id: 11743562013128004906,
                            location: <internal>:33:34,
                            kind: Literal(
                                Literal {
                                    id: 11743562013128004906,
                                    location: <internal>:33:34,
                                    kind: Int(
                                        IntLiteral {
                                            id: 11743562013128004906,
                                            value: 0,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                        Expression {
                            id: 17615343019692007359,
                            location: <internal>:36:37,
                            kind: Literal(
                                Literal {
                                    id: 17615343019692007359,
                                    location: <internal>:36:37,
                                    kind: Int(
                                        IntLiteral {
                                            id: 17615343019692007359,
                                            value: 1,
                                            kind: I32,
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                },
            ),
        },
    },
}
