compiler/lume_hir/src/snapshots/lume_hir__lower__tests__range_snapshots@expr_exclusive.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\n            let a = 0;\n            let b = 1;\n            let _ = (a..b);"
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "a",
                    location: <internal>:17:18,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:21:22,
                    kind: Literal(
                        Literal {
                            id: 5871781006564002453,
                            location: <internal>:21:22,
                            kind: Int(
                                IntLiteral {
                                    id: 5871781006564002453,
                                    value: 0,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:13:23,
    },
    Statement {
        id: 11743562013128004906,
        kind: Variable(
            VariableDeclaration {
                id: 11743562013128004906,
                name: Identifier {
                    name: "b",
                    location: <internal>:40:41,
                },
                declared_type: None,
                value: Expression {
                    id: 17615343019692007359,
                    location: <internal>:44:45,
                    kind: Literal(
                        Literal {
                            id: 17615343019692007359,
                            location: <internal>:44:45,
                            kind: Int(
                                IntLiteral {
                                    id: 17615343019692007359,
                                    value: 1,
                                    kind: I32,
                                },
                            ),
                        },
                    ),
                },
            },
        ),
        location: <internal>:36:46,
    },
    Statement {
        id: 5040379952546458196,
        kind: Variable(
            VariableDeclaration {
                id: 5040379952546458196,
                name: Identifier {
                    name: "_",
                    location: <internal>:63:64,
                },
                declared_type: None,
                value: Expression {
                    id: 10912160959110460649,
                    location: <internal>:68:72,
                    kind: StaticCall(
                        StaticCall {
                            id: 10912160959110460649,
                            name: std::new::Range,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 16783941965674463102,
                                    location: <internal>:68:69,
                                    kind: Variable(
                                        Variable {
                                            id: 16783941965674463102,
                                            reference: 0,
                                            name: Identifier {
                                                name: "a",
                                                location: <internal>:68:69,
                                            },
                                            location: <internal>:68:69,
                                        },
                                    ),
                                },
                                Expression {
                                    id: 4208978898528913939,
                                    location: <internal>:71:72,
                                    kind: Variable(
                                        Variable {
                                            id: 4208978898528913939,
                                            reference: 11743562013128004906,
                                            name: Identifier {
                                                name: "b",
                                                location: <internal>:71:72,
                                            },
                                            location: <internal>:71:72,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:59:74,
    },
]
